--- a/app/assets/stylesheets/helpers/_overwrites.scss
+++ b/app/assets/stylesheets/helpers/_overwrites.scss
@@ -1,16 +1,16 @@
-.gem-c-fieldset {
-  .govuk-fieldset__legend {
-    font-weight: bold;
-  }
-}
-
-.govuk-fieldset__legend {
-  .gem-c-title__text {
-    margin-top: govuk-spacing(8);
-    margin-bottom: govuk-spacing(8);
-  }
-}
-
 .gem-c-summary-list {
   border: 0;
+}
+
+// TODO extend fieldset gem to include hidden legend option
+.location-form {
+  .govuk-fieldset__legend {
+    @include govuk-visually-hidden;
+  }
+  .govuk-fieldset .govuk-form-group:first-of-type {
+    margin-bottom: govuk-spacing(6);
+  }
+  .govuk-form-group:last-of-type {
+    margin-bottom: 0; // Remove margin from last item in nested groups
+  }
 }
