--- a/app/views/application/_location_form.html.erb
+++ b/app/views/application/_location_form.html.erb
@@ -23,11 +23,10 @@
   <% end %>
 
   <form method="post" id="local-locator-form" class="location-form">
-    <fieldset class="govuk-fieldset">
-      <legend class=" govuk-fieldset__legend govuk-visually-hidden">Postcode lookup</legend>
-
+    <%= render "govuk_publishing_components/components/fieldset", {
+      legend_text: "Postcode lookup"
+      } do %>
       <%= render partial: 'draft_fields' %>
-
       <%= render "govuk_publishing_components/components/input", {
         label: {
           text: "Enter a postcode"
@@ -40,15 +39,18 @@
         autocomplete: "postal-code",
         width: 10,
       } %>
-
-      <%= render "govuk_publishing_components/components/button", text: "Find", margin_bottom: true %>
-
+      <%= render "govuk_publishing_components/components/button", 
+        text: "Find", 
+        margin_bottom: true 
+      %>
       <%= tag.p link_to("Find a postcode on Royal Mail's postcode finder",
-                    "https://www.royalmail.com/find-a-postcode",
-                    id: 'postcode-finder-link',
-                    class: "govuk-link",
-                    rel: "external"),
-                class: "govuk-body" %>
-    </fieldset>
+        "https://www.royalmail.com/find-a-postcode",
+        id: 'postcode-finder-link',
+        class: "govuk-link",
+        rel: "external"),
+        class: "govuk-body" 
+      %>
+    <% end %>
+
   </form>
 </div>
