--- a/app/views/electoral/_form.html.erb
+++ b/app/views/electoral/_form.html.erb
@@ -25,31 +25,34 @@
   <%= form_with url: electoral_services_path,
     method: :get,
     id: "local-locator-form",
-    class: "location-form" do |form| %>
-    <%= tag.fieldset do %>
-      <%= tag.legend "Postcode lookup", class: "govuk-visually-hidden" %>
-      <%= render partial: 'draft_fields' %>
-
-      <%= render "govuk_publishing_components/components/input", {
-        label: {
-          text: "Enter a postcode"
-        },
-        value: @postcode.sanitized_postcode,
-        name: "postcode",
-        id: "postcode",
-        hint: "For example SW1A 2AA",
-        invalid: false,
-        autocomplete: "postal-code",
-      } %>
-
-      <%= render "govuk_publishing_components/components/button", text: "Find", margin_bottom: true %>
-
-      <%= tag.p link_to("Find a postcode on Royal Mail's postcode finder",
-                    "https://www.royalmail.com/find-a-postcode",
-                    id: 'postcode-finder-link',
-                    class: "govuk-link",
-                    rel: "external"),
-                class: "govuk-body" %>
-    <% end %>
+    class: "location-form" do |form| 
+  %>
+    <%= render "govuk_publishing_components/components/fieldset", {
+      legend_text: "Postcode lookup"
+    } do %>
+    <%= render partial: 'draft_fields' %>
+    <%= render "govuk_publishing_components/components/input", {
+      label: {
+        text: "Enter a postcode"
+      },
+      value: @postcode.sanitized_postcode,
+      name: "postcode",
+      id: "postcode",
+      hint: "For example SW1A 2AA",
+      invalid: false,
+      autocomplete: "postal-code",
+      width: 10,
+    } %>
+    <%= render "govuk_publishing_components/components/button", 
+      text: "Find", 
+      margin_bottom: true 
+    %>
+    <%= tag.p link_to("Find a postcode on Royal Mail's postcode finder",
+      "https://www.royalmail.com/find-a-postcode",
+      id: 'postcode-finder-link',
+      class: "govuk-link",
+      rel: "external"),
+      class: "govuk-body" 
+    %>
   <% end %>
 </div>
