Remove duplicate headers
Header is already used in the top bar, this duplicate is unnecessary, and while not invalid, and an a11y concern

--- a/app/views/shared/_base_page.html.erb
+++ b/app/views/shared/_base_page.html.erb
@@ -1,8 +1,8 @@
 <main id="content" role="main" class="<%= main_class if local_assigns.include?(:main_class) %>" <%= @lang_attribute %>>
 
-  <header class="page-header govuk-grid-column-two-thirds">
+  <div class="page-header govuk-grid-column-two-thirds">
     <%= render "govuk_publishing_components/components/title", context: local_assigns[:context], title: title %>
-  </header>
+  </div>
   <div class="article-container group govuk-grid-column-two-thirds">
     <div class="content-block">
       <div class="inner">
