Remove duplicate headers
Header is already used in the top bar, this duplicate is unnecessary, and while not invalid, and an a11y concern as header a landmark role

--- a/app/views/travel_advice/index.html.erb
+++ b/app/views/travel_advice/index.html.erb
@@ -4,7 +4,7 @@
 <% end %>
 
 <main id="content" role="main" class="group full-width">
-  <header class="govuk-grid-row">
+  <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <%= render "govuk_publishing_components/components/title", {
         title: @presenter.title,
@@ -43,7 +43,7 @@
         </div>
       </div>
     </div>
-  </header>
+  </div>
 
   <div class="travel-container js-travel-container">
     <section class="govuk-grid-row">
