Add SaB intervention A/B

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,7 @@ $govuk-new-link-styles: true;
 @import 'govuk_publishing_components/components/hint';
 @import 'govuk_publishing_components/components/image-card';
 @import 'govuk_publishing_components/components/input';
+@import 'govuk_publishing_components/components/intervention';
 @import 'govuk_publishing_components/components/label';
 @import 'govuk_publishing_components/components/lead-paragraph';
 @import 'govuk_publishing_components/components/notice';
