--- a/app/views/local_transaction/search.html.erb
+++ b/app/views/local_transaction/search.html.erb
@@ -3,6 +3,7 @@
     schema: :article,
     content_item: @content_item %>
   <%= explore_menu_variant.analytics_meta_tag.html_safe if explore_menu_testable? %>
+  <%= sab_page_variant.analytics_meta_tag.html_safe if is_testable_sab_page? %>
 <% end %>
 
 <%= render layout: 'shared/base_page', locals: {
@@ -10,6 +11,8 @@
   publication: @publication,
   edition: @edition,
 } do %>
+
+  <%= render 'govuk_publishing_components/components/intervention' if should_show_sab_intervention? %>
 
   <% if @publication.introduction.present? %>
     <section class="intro">
