--- a/app/views/transaction/show.html.erb
+++ b/app/views/transaction/show.html.erb
@@ -21,6 +21,7 @@
   <% end %>
 
   <%= explore_menu_variant.analytics_meta_tag.html_safe if explore_menu_testable? %>
+  <%= sab_page_variant.analytics_meta_tag.html_safe if is_testable_sab_page? %>
 <% end %>
 
 <%= render layout: 'shared/base_page', locals: {
@@ -28,6 +29,8 @@
   publication: @publication,
   edition: @edition
 } do %>
+  <%= render 'govuk_publishing_components/components/intervention' if should_show_sab_intervention? %>
+
   <section class="intro">
     <div class="get-started-intro">
       <%= render "govuk_publishing_components/components/govspeak", { } do %>
